smooth brush used on a shape key messes up the topology #34773

Closed
opened 2013-03-26 15:05:42 +01:00 by Todor Imreorov · 5 comments

%%%--- Operating System, Graphics card ---
ubuntu 12.10, ati 4650

- Blender version with error, and version that worked ---

blender-2.66-r55587-linux-glibc211-x86_64

- Short description of error ---

Creating shape keys for a character's facial expressions, I sometimes use the sculpting mode grab and inflate brushes. They work fine.
Using the smooth brush on a shape key sends some of the vertices in my mesh to the world origin (0.0.0)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

to replicate:
1.open the attached blend file
2. Use the Smooth sculpt brush

It did that on 3 characters so far. If you use it on a fresh sphere object, you dont get this issue, so I am guessing that one of the steps leading to the creation of the characters brings up the bug. It's especially sneaky when one needs to export the mesh as you sometimes dont realise what it did if you havent enables wireframe display in the object properties%%%

%%%--- Operating System, Graphics card --- ubuntu 12.10, ati 4650 - Blender version with error, and version that worked --- blender-2.66-r55587-linux-glibc211-x86_64 - Short description of error --- Creating shape keys for a character's facial expressions, I sometimes use the sculpting mode grab and inflate brushes. They work fine. Using the smooth brush on a shape key sends some of the vertices in my mesh to the world origin (0.0.0) - Steps for others to reproduce the error (preferably based on attached .blend file) --- to replicate: 1.open the attached blend file 2. Use the Smooth sculpt brush It did that on 3 characters so far. If you use it on a fresh sphere object, you dont get this issue, so I am guessing that one of the steps leading to the creation of the characters brings up the bug. It's especially sneaky when one needs to export the mesh as you sometimes dont realise what it did if you havent enables wireframe display in the object properties%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Will check on this.%%%

%%%Will check on this.%%%

%%%Fixed in svn rev55642. Thanks for the report, closing.%%%

%%%Fixed in svn rev55642. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%wow that was fast. Thank you!! %%%

%%%wow that was fast. Thank you!! %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34773
No description provided.