Fix #34773: smooth brush used on a shape key messes up the topology

Key block update was missing coordinates for hidden vertices.